--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "ejs": "~0.8.4",
     "composable-middleware": "^0.3.0",
     "connect-mongo": "^0.4.1",
-    "tingodb": "~0.3.1"
+    "tingodb": "~0.3.1",
+    "request": "~2.51.0",
+    "node-promise": "~0.5.10"
   },
   "devDependencies": {
     "grunt": "~0.4.4",
